# waybox

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  main.go
cmd/: console.go  create.go  destroy.go  launch.go  list.go  passwords.go  root.go  start.go  stop.go  usb.go
docs/superpowers/plans/: 2026-04-04-waybox.md
docs/superpowers/specs/: 2026-04-04-waybox-design.md
internal/audio/: tunnel.go
internal/config/: config.go  config_test.go  passwords.go  validation.go
internal/libvirt/: parse.go  venus.go  virsh.go  virsh_test.go  xml.go
internal/nixos/: configgen.go  configgen_test.go  imagebuilder.go  packages.go
internal/nixos/templates/: audio.nix.tmpl  base.nix.tmpl  flatpak.nix.tmpl  venus.nix.tmpl  virtiofs.nix.tmpl  waypipe.nix.tmpl
internal/vm/: device.go  lifecycle.go  network.go  provisioner.go  usb.go
internal/waypipe/: desktop.go  session.go
src/: error.rs  lib.rs  main.rs  provisioner.rs
src/config/: mod.rs  passwords.rs  validation.rs
src/display/: audio.rs  desktop.rs  mod.rs  waypipe.rs
src/libvirt/: domain.rs  mod.rs
src/nixos/: image.rs  mod.rs  packages.rs
templates/: audio.nix.tmpl  base.nix.tmpl  flatpak.nix.tmpl  venus.nix.tmpl  virtiofs.nix.tmpl  waypipe.nix.tmpl
tests/: config_lifecycle.rs
