[package]
name = "waybox"
version = "0.1.0"
edition = "2021"
description = "Isolated application VMs with native Wayland integration"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
askama = "0.15"
virt = "0.4"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3.27.0"
